docs(docs-infra): Fixes the visibility of the copy link button in CLI headings
Fixes the visibility of the copy link button in CLI documentation headings.

(cherry picked from commit a5ebdd9cd14c7fe84640bd7e3c67fd5a0859f1a0)

--- a/adev/shared-docs/styles/_reference.scss
+++ b/adev/shared-docs/styles/_reference.scss
@@ -73,7 +73,8 @@
     }
   }
 
-  .docs-api {
+  .docs-api,
+  .docs-cli {
     h1,
     h2,
     h3,
